--- a/2.md
+++ b/2.md
@@ -112,16 +112,20 @@
 # Darwin <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
   
 # iOS <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
-
+  
 # Android <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
   * an open source operating system for mobile devices, developed at [Google](#Google-company)
 
 # android
   * a device running the [Android](#android-operating-system) operating system
-  * a mobile device that *can* run the [Android](#android-operating-system) operating system
+  * a mobile device that *can* run the [Android](#android-operating-system) operating system. (Not an iPhone)
 
 # android
   * less common synonym for [robot](#robot)
+
+# Android Open Source Project
+  * aka "AOSP"
+  * refers to Android, and connotates further it's openness.
 
 # Ubuntu <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
   * operating system
@@ -173,7 +177,10 @@
 
 # ArcoLinux Plasma
 
-# Purism <sup><sub><sup>`Operating System`</small></sup></sub></sup>
+# Purism 
+  maintainer of Pure OS
+
+# Pure OS <sup><sub><sup>`Operating System`</small></sup></sub></sup>
 
 # LinuxFX
   
@@ -181,6 +188,24 @@
 
 # Wubuntu
 
+# Tizen
+
+# Sailfish OS
+# KaiOS
+# Firefox OS
+# Chrome OS
+# Chromium OS
+# Postmarket OS
+# LineageOS
+# Ubuntu Touch
+# Mobian
+# Graphene OS
+# Symbian
+# Blackberry OS
+# Calyx OS
+# Plasma Mobile
+# Maemo
+# Lune OS
 # Twitter
   * The single best platform for togetherness and community over the world wide web.
 
@@ -201,102 +226,106 @@
   * co-founder, and former CEO of [Microsoft](#microsoft-company)
 # Sony `company`
   
-# Linux Foundation
+# Linux Foundation <sup><sub><sup>`organization`</sup></sub></sup>
 
-# Free Software Foundation
+# Free Software Foundation <sup><sub><sup>`organization`</sup></sub></sup>
 
-# NXP
+# NXP <sup><sub><sup>`company`</sup></sub></sup>
 
-# SK hynix
+# SK hynix <sup><sub><sup>`company`</sup></sub></sup>
 
-# Cirrus Logic
+# Cirrus Logic <sup><sub><sup>`company`</sup></sub></sup>
 
-# STMicroelectronics
+# STMicroelectronics <sup><sub><sup>`company`</sup></sub></sup>
 
-# Vishay
+# Vishay <sup><sub><sup>`company`</sup></sub></sup>
 
-# Phillips
+# Phillips <sup><sub><sup>`company`</sup></sub></sup>
 
-# LG
+# LG <sup><sub><sup>`company`</sup></sub></sup>
 
-# Panasonic
+# Panasonic <sup><sub><sup>`company`</sup></sub></sup>
 
-# Baidu
+# Baidu <sup><sub><sup>`company`</sup></sub></sup>
 
-# Tencent
+# Tencent <sup><sub><sup>`company`</sup></sub></sup>
 
-# TCL
+# TCL <sup><sub><sup>`company`</sup></sub></sup>
 
-# Vizio
+# Vizio <sup><sub><sup>`company`</sup></sub></sup>
 
-# Sharp
+# Sharp <sup><sub><sup>`company`</sup></sub></sup>
 
-# Hitachi
+# Hitachi <sup><sub><sup>`company`</sup></sub></sup>
 
-# Dell
+# Dell <sup><sub><sup>`company`</sup></sub></sup>
 
-# Hewlett Packard
+# Hewlett Packard <sup><sub><sup>`company`</sup></sub></sup>
 
-# Toshiba
+# Toshiba <sup><sub><sup>`company`</sup></sub></sup>
 
-# Sega
+# Sega <sup><sub><sup>`company`</sup></sub></sup>
 
-# Nintendo
+# Nintendo <sup><sub><sup>`company`</sup></sub></sup>
 
-# Neo Geo
+# Neo Geo <sup><sub><sup>`company`</sup></sub></sup>
 
-# Atari
+# Atari <sup><sub><sup>`company`</sup></sub></sup>
 
-# Commodore
+# Commodore <sup><sub><sup>`company`</sup></sub></sup>
 
-# Tandy
+# Tandy <sup><sub><sup>`company`</sup></sub></sup>
 
 # SoundBlaster
   * sound card by Creative Technology
 
-# Creative Technology
+# Creative Technology <sup><sub><sup>`company`</sup></sub></sup>
 
-# QSound
+# QSound 
   
-# Seer Systems
+# Seer Systems <sup><sub><sup>`company`</sup></sub></sup>
 
-# Ensoniq
+# Ensoniq <sup><sub><sup>`company`</sup></sub></sup>
 
-# Radioshack
+# Advanced Semiconductor Engineering <sup><sub><sup>`company`</sup></sub></sup>
 
-# Google
+# Radioshack <sup><sub><sup>`company`</sup></sub></sup>
 
-# Alphabet
+# Google <sup><sub><sup>`company`</sup></sub></sup>
 
-# Samsung
+# Alphabet <sup><sub><sup>`company`</sup></sub></sup>
 
-# Apple
+# Samsung <sup><sub><sup>`company`</sup></sub></sup>
 
-# Motorola
+# Apple <sup><sub><sup>`company`</sup></sub></sup>
 
-# Lenovo
+# Motorola <sup><sub><sup>`company`</sup></sub></sup>
 
-# Taiwan Semiconductor Manufacturing Company
+# Lenovo <sup><sub><sup>`company`</sup></sub></sup>
+
+# Taiwan Semiconductor Manufacturing Company <sup><sub><sup>`company`</sup></sub></sup>
   * aka "TSMC"
 
-# Amazon 
+# Amazon <sup><sub><sup>`company`</sup></sub></sup>
   
-# Jeff Bezos
+# Jeff Bezos <sup><sub><sup>`person`</sup></sub></sup>
   * founder and executive chairman of [Amazon](#amazon-company)
-# Meta
+# Meta <sup><sub><sup>`company`</sup></sub></sup>
 
-# Mark Zuckerberg
+# Mark Zuckerberg <sup><sub><sup>`person`</sup></sub></sup>
   * co-founder of the [Facebook](#facebook-company) company
   , later rebranded and currently known as [Meta](#meta-company)
-# ASUS
+# ASUS <sup><sub><sup>`company`</sup></sub></sup>
 # ASUS ROG
 # ASUS ROG Ally
-# Valve
+# Valve <sup><sub><sup>`company`</sup></sub></sup>
 # Valve Steam Deck
-# MSI
+# MSI <sup><sub><sup>`company`</sup></sub></sup>
 # MSI Claw
 # Lenovo Legion
 # Lenovo Legion Go
+
+# Cisco <sup><sub><sup>`company`</sup></sub></sup>
 
 # Retroid
 # Odin
@@ -316,8 +345,6 @@
 # Lemuroid
 # Launchbox
 
-# Tandy
-
 # Color Graphics Adapter
 
 # EGA
@@ -326,52 +353,67 @@
 
 # Ubiquiti
 
-# 9to5Mac
+# 9to5Mac <sup><sub><sup>`news outlet`</sup></sub></sup>
 
-# IGN
+# IGN <sup><sub><sup>`news outlet`</sup></sub></sup>
 
-# ArsTechnica
+# ArsTechnica <sup><sub><sup>`news outlet`</sup></sub></sup>
 
-# 9to5Google
+# 9to5Google <sup><sub><sup>`news outlet`</sup></sub></sup>
 
-# Android Authority
+# 9to5Mac <sup><sub><sup>`news outlet`</sup></sub></sup>
 
-# Android Police
+# Android Authority <sup><sub><sup>`news outlet`</sup></sub></sup>
 
-# The Verge
+# Android Police <sup><sub><sup>`news outlet`</sup></sub></sup>
 
-# MacRumors
+# The Verge <sup><sub><sup>`news outlet`</sup></sub></sup>
 
-# CNET
+# MacRumors <sup><sub><sup>`news outlet`</sup></sub></sup>
 
-# Forbes
+# CNET <sup><sub><sup>`news outlet`</sup></sub></sup>
 
-# PhoneArena
+# Forbes <sup><sub><sup>`news outlet`</sup></sub></sup>
 
-# Reuters
+# PhoneArena <sup><sub><sup>`news outlet`</sup></sub></sup>
 
-# XDA
+# Reuters <sup><sub><sup>`news outlet`</sup></sub></sup>
 
-# Toms Hardware
+# XDA <sup><sub><sup>`news outlet`</sup></sub></sup>
 
-# Toms Guide
+# Toms Hardware <sup><sub><sup>`news outlet`</sup></sub></sup>
 
-# Apple Insider
+# Toms Guide <sup><sub><sup>`news outlet`</sup></sub></sup>
 
-# Ming Chi Kuo
-  * 
-# Ice Universe
+# Apple Insider <sup><sub><sup>`news outlet`</sup></sub></sup>
 
+# Associated Press <sup><sub><sup>`news outlet`</sup></sub></sup>
+
+# National Public Radio <sup><sub><sup>`news outlet`</sup></sub></sup>
+  * more commonly marketed and known as "NPR"
+
+# Ming Chi Kuo <sup><sub><sup>`trusted leaker or analyst`</sup></sub></sup>
+  * Apple leaker
+# Ice Universe <sup><sub><sup>`trusted leaker or analyst`</sup></sub></sup>
+  * Samsung Leaker
+# Jeff Pu <sup><sub><sup>`trusted leaker or analyst`</sup></sub></sup>
 # Mi UI
 
 # Hello UI
+
+# Harmony OS
+
+# Color OS
+
+# Hyper OS
+
+# Oxygen OS
 
 # TouchWiz
 
 # Samsung Experience
 
 # One UI
-
 
 # Universal Windows Program
   * A Portable Executable, specific to Windows &geq; 8
@@ -381,34 +423,35 @@
   * shortened, "ELF"
 # git
   
-# GitHub
+# GitHub <sup><sub><sup>`Git host`</sup></sub></sup> 
 
 Gitpod.io
 
-BitBucket
+# BitBucket <sup><sub><sup>`Git host`</sup></sub></sup>
 
-GitLab
+# GitLab <sup><sub><sup>`Git Host`</sup></sub></sup>
 
-Sourceforge
+# Sourceforge <sup><sub><sup>`source code repo?`</sup></sub></sup>
 
-PasteBin
+# PasteBin <sup><sub><sup>`idek rlly`</sup></sub></sup>
+  * where people go to just stuff random code that will probably go to use later, or share code with people without taking up Github storage
 
-forgejo
+forgejo 
 
-Heroku
+# Heroku <sup><sub><sup>`deployment service`</sup></sub></sup>
 
-Netify
-Vercel
-firebase
+# Netify <sup><sub><sup>`deployment service`</sup></sub></sup>
+# Vercel <sup><sub><sup>`deployment service`</sup></sub></sup>
+# Firebase <sup><sub><sup>`deployment service`</sup></sub></sup>
 
-Replit
+# Replit
 
-glitch.me
+# glitch.me
 
-stackblitz
-Google Scholar
+# stackblitz
+# Google Scholar
 
-
+# StackOverflow
 A#
 
 # Cortex `processing`
@@ -417,14 +460,17 @@ A#
 # Aarch64
   * see Arm, sense 2
 # arm64
-  * aka "Arm 64 bit
+  * aka "Arm 64 bit".
+# arm32
 
 # armhf
-
+  aka "arm hard float"
+# Microprocessor without Interlocked Pipeline Stages
+  * aka "MIPS"
 # Arm
   * a company that exists solely to collect royalties for using its proprietary Arm architecture, sense 2
   * an [reduced instruction set computing](reduced-instruction-set-computer) architecture 
-# HDMI
+# HDMI 
   * a company that exists solely to collect royalties for using it's proprietary HDMI connector and protocol
   * A proprietary port / cable end for serving video information
 
@@ -462,7 +508,8 @@ A#
   > Interchangable: [IA-86](#ia-86), Universal [32-bit x86](#32-bit-x86)
 # Scalable Processor Architecture `computer architecture`
   * aka "SPARC"
-# 
+# Motorola 68000 <sup><sub><sup>`computer architecture` AND `computer processor`</sup></sub></sup
+  * aka "68000", "68k" from "68000", or "m68k"
 
 opportunity
 library
@@ -475,17 +522,17 @@ february
 
 
 
-# Digital Millenium Copyright Act
+# Digital Millenium Copyright Act `law`
   * aka "DMCA"
   * 
-# DMCA &sect;1201
+# DMCA &sect;1201 `law`
   * Commonly argued section of Copyright law used against emulation softwares, defining that DRM may not be circumvented.
   * It States, under (a)(1)(A)
     * <i>“No person shall circumvent a technological measure that effectively controls access to a work protected under this title.”</i>
   * Used to prevent 3rd party repairs
   * Used to restrict software compatibility
 
-# Nintendo
+# Nintendo <sup><sub><sup>`company`</sup></sub></sup>
   * Company known for creating widespread game consoles, marketed mainly at kids and families.
   * Company known for obliterating and suing <small><small><small>TF OUT OF</small></small></small> developers of software that emulates it's consoles
 
@@ -587,8 +634,13 @@ february
 
 
 
+# file signature
+  * a short set of bytes that are always found in a certain file format, usually at the beginning.
 
-
+# checksum
+  * a cryptographic 
+# CRC
+# CIC
 
 
 
@@ -596,9 +648,40 @@ february
   * aka "MWC"
 # Consumer Electronics Show
   * aka "CES"
-
+# Game Developers Conference
+  * aka "GDC"
 # Wafer-level Chip Scale Package
+  * aka "WLCSP", "WCSP", or "WLP" from "Wafer-level packaging"
+  > [!NOTE]
+  > 
+# integrated circuit
+# chip-scale package
+# integrated circuit packaging
 
+# die <sup><sub><sup>`circuitry`</sup></sub></sup>
+
+# Land Grid Array
+  * aka "LGA"
+# Pin Grid Array
+  * aka "PGA"
+# Ball Grid Array
+  * aka "BGA"
+# Pogo Pin
+
+# pin
+  * a connec
+# land
+  * a 
+# anode
+
+# cathode
+
+# node <sup><sub><sup>(`networking term`)</sup></sub></sup>
+# flex cable
+  * a thin connector
+
+# RGH
+# JTAG
 # Non-Solder Mask Defined
 
 # Solder Mask Defined
@@ -617,14 +700,14 @@ february
 # Apple Silicon
   * ARM-based processors designed by Apple to ditch Intel x86 processors on Macs
   * see also [M-series chips](#)
-# Texas Instruments
+# Texas Instruments <sup><sub><sup>`company`</sup></sub></sup>
 
-# ST Microelectronics
-# Mediatek
+# ST Microelectronics <sup><sub><sup>`company`</sup></sub></sup>
+# Mediatek <sup><sub><sup>`company`</sup></sub></sup>
 
-# Mediatek Dimensity
+# Mediatek Dimensity 
   
-# Realtek
+# Realtek <sup><sub><sup>`company`</sup></sub></sup>
   
 # MSPM0C1104
   * the most edible mcu by TI
@@ -640,6 +723,9 @@ february
 # [Serial Peripheral Interface](https://en.wikipedia.org/wiki/Serial_Peripheral_Interface)
 # wafer
 
+# Die Singulation
+
+# Wafer Dicing
 # Quad SPI
 
 # Queued SPI
@@ -658,7 +744,7 @@ february
 # serial
 
 # NVIDIA Tegra
-# Qualcomm `company`
+# Qualcomm <sup><sub><sup>`company`</sup></sub></sup>
 # Qualcomm Snapdragon `processor`
 # Turnip
   * open source driver for Qualcomm Adreno GPUs
@@ -694,14 +780,22 @@ february
 # LRDIMM
 # CAMM
 # SOCAMM
-# EMMC
+# eMMC
 # M.2
-# NVME
+# NVMe
 # SSD
 # HDD
-
+# IDE
+# SCSI
+# PATA
+# SATA
+# PCI
+# PCIe
+# ROM
+  * acronym for [Read Only Memory]()
+  * refers to an executable file, archived commonly for emulation.
 # DRM
-  
+  * 
 
 
 opportunity
@@ -712,4 +806,242 @@ february
 # Asahi
   * linux distro specifically designed for Mac devices
 # [DarwinKVM](https://docs.darwinkvm.com/)
-#
+
+# PC
+  * acronym for [Personal Computer]()
+  * often refers to Personal Computers running the Windows operating system, after Apple began marketing Macs as otherwise, and Linux devices not having gained significant traction.
+  * can also refer to Linux devices as well; mostly *in conjunction* with Windows devices.
+    * "This app is available for PC and Mac"
+
+Alpha
+Beta
+Gamma
+Pre-release
+Release Candidate
+Release
+Stable
+Canary
+Nightly
+production
+  * of something to be deployed, refers to it meant for being released widely or accessible to everyone
+  * the "real" thing, not for testing.
+    * "WHAT!? YOU LEAKED OUR ALPHA BUILD!? ON PRODUCTION SERVERS (where anyone in the world can see them)!!? It is now YOUR sole responsibility to CHAIR THE PR DEPARTMENT
+# OpenAI
+# NVIDIA
+# Perplexity
+# ByteDance
+# Anthropic
+
+# AMD
+# Intel
+# Inno Setup `installer framework`
+# InstallShield `installer framework`
+# NullSoft NSIS `installer framework`
+# Squirrel `installer framework`
+# WiX `installer framework`
+# Spider Board
+# PC-3000
+# Itanium
+# 
+# Pentium
+# Celeron
+# ByteSpider
+  * an agressive web crawler that ignores robots.txt rules, and causes high traffic. by ByteDance
+# Ultrix
+  * unix based OS
+# OpenVMS
+  * abbreviated form of "Open" and "Virtual Memory System"
+  * aka "VMS", or "VAX" from "Virtual Address eXtension"
+# VAX
+  * occasionally refers to [OpenVMS](), sometimes named VAX.
+  * the architecture of the thing
+# Prime Computer
+  
+# Digital Equipment Corporation
+
+# Programmed Data Processor
+  * aka "PDP"
+  * series of computers by [Digital Equipment Corporation]
+# PDP-1
+# Punch Tape
+  * essentially a punch card 
+# Punch Card
+  * The earliest form of digital storage: A piece of cardstock paper that old computers used <script>YUZD</script> to manipulate data to process or execute, read by checking for arranged holes (punches), and modified by punching new holes.
+# A Symbolic Analysis of Relay and Switching Circuits
+# PA RISC
+# 3M
+# Maxell
+# IBM
+# Sayer
+# Fujifilm
+# Sandisk
+# RCA `company`
+# Vtech `company`
+# Circuit City `company`
+# DIVX
+# Technicolor
+# Z4 `computer`
+# Laserdisc
+# Blockbuster `company`
+# DTMF Tone
+
+# Phone Phreaking
+# GSM
+# CDMA
+# DOSBox
+# FreeDOS
+# Free95
+# ReactOS
+# DOOM
+# FreeDOOM
+# Libre `adjective`
+
+
+
+# a11y >(accessibility)
+# accessibility [accom]
+  num<a11y
+  n> allowing use of or being accommodating to people with disabilities or with limited hardware
+# Americans with Disabilities Act [legal] [accom]
+  acr<ADA
+  n> a law requiring accomodations to websites
+# What You See Is What You Get
+  acr<WYSIWYG
+# Web Hypertext Application Technology # Working Group
+  acr<WHATWG
+# Software
+  n> executable files, bytes, or code
+    s> I was tricked into running malicious (Software)
+# Hardware
+  n> physical components of a computer
+# Firmware
+  n> A kind of (software), run directly on (hardware). Usually (Read-Only), but sometimes may be updated. Manages hardware for the operating system.
+    s> I should update my BIOS firmware.
+  n> On certain (embedded system)s, the (Operating System), which runs on the hardware. Sometimes solely an alias for Operating System rather than (firmware:n1); 
+    +> Operating System
+    +> 
+# print
+  n> a physical paper document that was (print){v1}ed
+  v1> send text or image document data to a printer to have it copy such data to paper
+  v2> send text to a terminal within a CLI application
+# document
+  v>
+  n> 
+
+# landing page
+# splash screen
+# ad campaign
+# License
+# Search Engine Optmization
+  acr<(SEO)
+# General Public License [license]
+  acr<(GPL)
+# Lesser General Public License  [license]
+  acr<(LGPL)
+# Affero General Public License [license]
+  acr<(AGPL)
+# Free Documentation License 
+  acr<(FDL)
+# Free System Distribution Guidelines
+  acr<(FSDG)
+# Apache License [license]
+# ASF >(Apache Software Foundation)
+# Apache Software Foundation
+  acr<ASF
+# FSF >(Free Software Foundation)
+# Free Software Foundation
+  acr<FSF
+# FOSS >(Free and Open Source Software)
+# Free and Open Source Software [
+  acr<FOSS
+# libre
+  a> digital content free to access
+  a> open sourced digital content
+  e<{Spanish "libre" = free(dom)}
+# Open Source
+  acr<(OS)
+  
+# lib >(Library)
+# library
+  abr<lib
+# OS >(Operating System | Open Source)
+# Operating System
+  acr<(OS)
+# v12n >(virtualization
+# virtualization
+  num<v12n
+  +>(container)
+# Kubernetes
+  num<k8s
+  +>(container)
+# Docker
+  +>(container)
+# container
+  +>(virtualization)
+# Software License [license]
+# screen
+  v> to filter something by removing entries with unwanted characteristics or selecting entries with wanted ones.
+  n> hardware used to display content to the user
+# Chromium
+# digital distribution
+# mobile
+# desktop
+# laptop
+
+# Personal Computer
+  acr<(PC)
+  n {origin}> A computing device owned by an individual for personal use. Generally a laptop or desktop
+  n {now}> A laptop or desktop computing device
+  +>(PC)
+# Internet
+  g> Access to (the Internet)
+    s> I have `Internet` at my home
+  n [the]> A means of communication between computers, linking billions across the world
+    s> You can find what you need on `the Internet`
+  n [some]> Access to (the Internet)
+    s> I will use `some Internet`
+    s> I have `some Internet`
+  n [a]> ???
+    ?> Maybe you're referring to a WiFi (router)
+    ?> Maybe you're referring to (some Internet)
+  +>(World Wide Web)
+# wine
+  n> A (translation layer) used to run (Windows) applications on Linux systems
+    +>(Windows)
+    +>(Translation Layer)
+    acr {now}<(Wine is Not an Emulator)
+    abr {origin}<(WINdows Emulator)
+  n [urban]> ur mom
+# deploy
+# initialize
+# Continuous Integration
+# codebase
+# Knowledge base 
+# COntinuous Delivery is separate from cdep
+# Continuous Deployment is separate form cdel
+
+# .NET
+# ASP
+# Central Processing Unit
+  < CPU
+# DebConf
+# Generic System Image
+  < GSI
+  > refers to a bootable image of an operating system for android devices supporting Project Treble
+# Graphics Processing Unit
+  << GPU
+# NAS
+# Neural Processing Unit
+# Power Supply Unit 
+  < PSU
+# Raspberry Pi
+  < RPi
+# Request for Comment  (docs)
+  < RFC
+# Trusted Platform Module
+  < TPM
+# Universal Serial Bus
+  << USB
+# Usb C
+# ethernet
+# linting
