--- a/2.md
+++ b/2.md
@@ -898,26 +898,29 @@ production
 
 
 
-# a11y >(accessibility)
+# a11y
+  * numeronym for accessibility
 # accessibility [accom]
-  num<a11y
-  n> allowing use of or being accommodating to people with disabilities or with limited hardware
-# Americans with Disabilities Act [legal] [accom]
-  acr<ADA
-  n> a law requiring accomodations to websites
+  * aka a11y
+  * allowing use by or being accommodating to people with disabilities or with limited hardware
+# Americans with Disabilities Act
+  * aka ADA
+  * a law requiring accomodations to websites
 # What You See Is What You Get
-  acr<WYSIWYG
+  * aka WYSIWYG
 # Web Hypertext Application Technology # Working Group
-  acr<WHATWG
+  * aka WHATWG
+# execute
+  * synonymous with run, though of a slightly different connotation
 # Software
-  n> executable files, bytes, or code
-    s> I was tricked into running malicious (Software)
+  * executable files, bytes, or code
+    * I was tricked into running malicious (Software)
 # Hardware
-  n> physical components of a computer
+  * physical components of a computer
 # Firmware
-  n> A kind of (software), run directly on (hardware). Usually (Read-Only), but sometimes may be updated. Manages hardware for the operating system.
+  * A kind of (software), run directly on (hardware). Usually (Read-Only), but sometimes may be updated. Manages hardware for the operating system.
     s> I should update my BIOS firmware.
-  n> On certain (embedded system)s, the (Operating System), which runs on the hardware. Sometimes solely an alias for Operating System rather than (firmware:n1); 
+  * On certain (embedded system)s, the (Operating System), which runs on the hardware. Sometimes solely an alias for Operating System rather than (firmware:n1); 
     +> Operating System
     +> 
 # print
@@ -967,7 +970,7 @@ production
 # OS >(Operating System | Open Source)
 # Operating System
   acr<(OS)
-# v12n >(virtualization
+# v12n >(virtualization)
 # virtualization
   num<v12n
   +>(container)
